--- a/src/App.css
+++ b/src/App.css
@@ -28,8 +28,6 @@
   color: #61dafb;
 }
 
-/* add responsive desgin */
-
 .top-bar {
   margin: 20px;
 }
@@ -38,21 +36,30 @@
   display: flex;
 }
 
-.main {
+.card {
   background-color: #fff;
   font-size: calc(10px + 2vmin);
   margin: 5px 15px;
   min-width: 400px;
   max-width: 100%;
+  min-height: 502px;
   padding: 15px 10px;
   box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
   border-radius: 10px;
   margin-bottom: 20px;
+  position: relative;
 }
 
-.main-inner {
+.card-inner {
   margin-top: 2rem;
   display: flex;
+}
+
+.card-inner-loading {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
 
 p {
@@ -96,6 +103,7 @@ h4 {
   margin-bottom: 1.5rem;
 }
 .currentWeather img {
+  width: 6rem;
   margin-right: 1.5rem;
 }
 .currentWeather .deg {
@@ -147,4 +155,8 @@ h4 {
   font-size: 31px;
   color: #1c1c1c;
   letter-spacing: -1.06px;
+}
+
+.footer img {
+  width: 1.5rem;
 }
