--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,5 +1,7 @@
 .App {
   text-align: center;
+  align-items: center;
+  justify-content: center;
 }
 
 .App-logo {
@@ -29,7 +31,7 @@
 }
 
 .top-bar {
-  margin: 20px;
+  margin: 20px 50px;
 }
 
 .cards {
@@ -157,6 +159,15 @@ h4 {
   letter-spacing: -1.06px;
 }
 
+.footer {
+  display: flex;
+  margin: 20px 200px;
+}
+
 .footer img {
   width: 1.5rem;
+}
+
+a + a {
+  margin-left: 10px;
 }
